# python-zte-mc801a

./: .gitignore  README.md  pyproject.toml
python_zte_mc801a/: main.py
python_zte_mc801a/client/: data_io.py  live.py
python_zte_mc801a/lib/: constants.py  data_processing.py  helpers.py  router_requests.py  utils.py
